--- a/python-backend/Procfile
+++ b/python-backend/Procfile
@@ -1,2 +1,2 @@
 # Modify this Procfile to fit your needs
-web: gunicorn server:app
+web: prisma py fetch && echo "how now brown cow!!!" && gunicorn backend:app
