--- a/fly.toml
+++ b/fly.toml
@@ -14,6 +14,10 @@ processes = []
   allowed_public_ports = []
   auto_rollback = true
 
+[mounts]
+source="voltage_place_vol"
+destination="/data"
+
 [[services]]
   http_checks = []
   internal_port = 8080
